# envoy-waf

./: .gitignore  VagrantFile
wasm-works/: build.sh  copy.sh  envoy-config.yaml
wasm-works/envoy-wasm/: wasm_filter01.wasm  wasm_singleton.wasm
wasm-works/waf-control-plane/: .gitignore  Cargo.toml  build.rs
wasm-works/waf-control-plane/proto/: logger.proto  rules-exchange.proto
wasm-works/waf-control-plane/src/: server.rs
wasm-works/waf-control-plane/src/services/: constraints.rs  filter_service.rs  logger_service.rs  mod.rs
wasm-works/wasm-filter01/: Cargo.toml  README.md  build.sh
wasm-works/wasm-filter01/src/: expr_matcher.rs  filtering_constraints.rs  http_context.rs  http_instance.rs  lib.rs  root_context.rs
wasm-works/wasm-singleton/: Cargo.toml  README.md  build.sh
wasm-works/wasm-singleton/proto/: filter-constraints.proto  logger.proto
wasm-works/wasm-singleton/src/: lib.rs
