[package]
name = "waf-control-plane"
version = "0.1.0"
edition = "2021"

[[bin]]
name="server"
path="./src/server.rs"


[dependencies]
tonic = "0.8.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.11.0"
bincode = "2.0.0-rc.1"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.8.0"